Partially update (Patch) is added