@@ -8,20 +8,18 @@ import kg.alatoo.task_management.repositories.TaskRepository;
 import kg.alatoo.task_management.repositories.UserRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.MockitoAnnotations;
 
 import java.sql.Date;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
 class TaskServiceImplTest {
 
     @Mock
@@ -36,83 +34,86 @@ class TaskServiceImplTest {
     @InjectMocks
     private TaskServiceImpl taskService;
 
-    private Task task;
-    private TaskDTO taskDTO;
-    private User user;
+    private Task testTask;
+    private TaskDTO testTaskDTO;
+    private User testUser;
 
     @BeforeEach
     void setUp() {
-        user = new User(1L, "Aisuluu", "Zhoodarbek", "aisuluu@gmail.com");
+        MockitoAnnotations.openMocks(this);
 
-        task = new Task(1L, "Test Task", "Description", "New", "High",
-                new Date(System.currentTimeMillis()), Date.valueOf("2025-01-01"), user);
-
-        taskDTO = new TaskDTO(1L, "Test Task", "Description", "New", "High",
-                new Date(System.currentTimeMillis()), "2025-01-01", user.getId());
+        testUser = new User(1L, "Aisuluu", "Zhoodarbek", "aisuluu@example.com");
+        testTask = new Task(1L, "Task Title", "Task Description", "New", "High",
+                new Date(System.currentTimeMillis()), Date.valueOf("2025-04-10"), testUser);
+        testTaskDTO = new TaskDTO(1L, "Task Title", "Task Description", "New", "High",
+                new Date(System.currentTimeMillis()), "2025-04-10", 1L);
     }
 
     @Test
-    void getAllTasks_shouldReturnTaskDTOList() {
-        when(taskRepository.findAll()).thenReturn(Arrays.asList(task));
-        when(taskMapper.toDTO(task)).thenReturn(taskDTO);
+    void getAllTasks() {
+        when(taskRepository.findAll()).thenReturn(List.of(testTask));
+        when(taskMapper.toDTO(testTask)).thenReturn(testTaskDTO);
 
         List<TaskDTO> result = taskService.getAllTasks();
 
+        assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals("Test Task", result.get(0).getTitle());
-        verify(taskRepository, times(1)).findAll();
+        assertEquals("Task Title", result.get(0).getTitle());
     }
 
     @Test
-    void getTaskById_shouldReturnTaskDTO() {
-        when(taskRepository.findById(1L)).thenReturn(Optional.of(task));
-        when(taskMapper.toDTO(task)).thenReturn(taskDTO);
+    void getTaskById() {
+        when(taskRepository.findById(1L)).thenReturn(Optional.of(testTask));
+        when(taskMapper.toDTO(testTask)).thenReturn(testTaskDTO);
 
         TaskDTO result = taskService.getTaskById(1L);
 
         assertNotNull(result);
-        assertEquals("Test Task", result.getTitle());
-        verify(taskRepository, times(1)).findById(1L);
+        assertEquals("Task Title", result.getTitle());
     }
 
     @Test
-    void getTaskById_shouldThrowExceptionIfNotFound() {
-        when(taskRepository.findById(1L)).thenReturn(Optional.empty());
+    void createTask() {
+        when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+        when(taskRepository.save(any(Task.class))).thenReturn(testTask);
+        when(taskMapper.toDTO(testTask)).thenReturn(testTaskDTO);
 
-        Exception exception = assertThrows(RuntimeException.class, () -> taskService.getTaskById(1L));
-
-        assertEquals("Task not found", exception.getMessage());
-    }
-
-    @Test
-    void createTask_shouldReturnTaskDTO() {
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(taskRepository.save(any(Task.class))).thenReturn(task);
-        when(taskMapper.toDTO(task)).thenReturn(taskDTO);
-
-        TaskDTO result = taskService.createTask(taskDTO);
+        TaskDTO result = taskService.createTask(testTaskDTO);
 
         assertNotNull(result);
-        assertEquals("Test Task", result.getTitle());
-        verify(taskRepository, times(1)).save(any(Task.class));
+        assertEquals("Task Title", result.getTitle());
     }
 
     @Test
-    void updateTask_shouldReturnUpdatedTaskDTO() {
-        when(taskRepository.findById(1L)).thenReturn(Optional.of(task));
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(taskRepository.save(any(Task.class))).thenReturn(task);
-        when(taskMapper.toDTO(task)).thenReturn(taskDTO);
+    void updateTask() {
+        when(taskRepository.findById(1L)).thenReturn(Optional.of(testTask));
+        when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+        when(taskRepository.save(any(Task.class))).thenReturn(testTask);
+        when(taskMapper.toDTO(testTask)).thenReturn(testTaskDTO);
 
-        TaskDTO result = taskService.updateTask(1L, taskDTO);
+        TaskDTO result = taskService.updateTask(1L, testTaskDTO);
 
         assertNotNull(result);
-        assertEquals("Test Task", result.getTitle());
-        verify(taskRepository, times(1)).save(any(Task.class));
+        assertEquals("Task Title", result.getTitle());
     }
 
     @Test
-    void deleteTask_shouldDeleteTask() {
+    void partiallyUpdateTask() {
+        when(taskRepository.findById(1L)).thenReturn(Optional.of(testTask));
+        when(taskRepository.save(any(Task.class))).thenReturn(testTask);
+        when(taskMapper.toDTO(testTask)).thenReturn(testTaskDTO);
+
+        Map<String, Object> updates = Map.of("title", "Updated Task Title");
+
+        TaskDTO result = taskService.partiallyUpdateTask(1L, updates);
+
+        assertNotNull(result);
+        assertEquals("Task Title", result.getTitle()); // Mocked return value
+    }
+
+    @Test
+    void deleteTask() {
+        when(taskRepository.existsById(1L)).thenReturn(true);
         doNothing().when(taskRepository).deleteById(1L);
 
         taskService.deleteTask(1L);
